# rust

./: README.md
api-sdt/: Cargo.toml  README.MD
api-sdt/api/v1/swaggerui/: swagger-initializer.js  swagger3.json
api-sdt/config/: Default.toml  Development.toml  Homologation.toml  Production.toml
api-sdt/deployments/: docker-compose-local.yaml  docker-compose.yaml
api-sdt/docs/: api-sdt.yaml
api-sdt/src/: errors.rs  lib.rs  main.rs  settings.rs  state.rs  telemetry.rs
api-sdt/src/app/: mod.rs
api-sdt/src/app/database/: mod.rs  projeto_repository.rs
api-sdt/src/app/transport/rest/: handlers.rs  routes.rs
api-sdt/src/domain/models/: mod.rs  projeto.rs
couchdb-kafka-connector/: .gitignore  Cargo.toml  README.MD
couchdb-kafka-connector/deployments/: docker-compose-local.yml  docker-compose.yml
couchdb-kafka-connector/src/: main.rs
hello-world/: README.md
hello-world-rsocket-client/: Cargo.toml
hello-world-rsocket-client/src/: main.rs
hello-world-rsocket-server/: Cargo.toml
hello-world-rsocket-server/src/: main.rs
sdt/: .env  Cargo.toml  docker-compose.yaml
sdt/src/: lib.rs  main.rs
sdt/src/app/: mod.rs
sdt/src/app/configs/: config.rs
sdt/src/app/rest/: mod.rs
sdt/src/app/rest/routes/: deleteMovie.rs  getMovie.rs  mod.rs  postMovie.rs  updateMovie.rs
sdt/src/app/rest/start_server/: start_server.rs
sdt/src/config/: development.toml
sdt/src/domain/: mod.rs
sdt/src/domain/entities/: mod.rs  movie_schema.rs  projeto_schema.rs
sdt/src/domain/ports/: mod.rs  projeto_repository_port.rs
