[package]
name = "couchdb-kafka-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch_rs = "0.9"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.30"
serde_json = "1.0.114"
rdkafka = { version = "0.36.2" }
log = "0.4.21"
#tokio-zookeeper = "0.2.1"
zookeeper = "0.8.0"
