[package]
name = "hello-world-rsocket-server"
version = "0.1.0"
authors = ["icorrea <italiviocorrea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0.3",features = ["full"] }
rsocket_rust = "0.7.2"
rsocket_rust_transport_tcp = "0.7.2"
