[package]
name = "sdt"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = "1.0.147"
dotenv = "0.15.0"
bson = "2.4.0"
env_logger = "0.9.1"
log = "0.4.17"
config = "0.13.2"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
serde_derive = "1.0.147"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]
tokio = { version = "1", features =["full"]}


